feat(details): add Similar,Recommendations sections and loading skeleton
- Create the DetailsSkelton component to display a nice loading UI when the details are being fetched
- Create new Similar component to display related content using the getSimilar API
- Create new Recommendations component to display related content using the getRecommendations API

--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="description"
+      content="Browse and discover movies and TV shows with Watchfolio - your personal streaming guide."
+    />
+
+    <title>Watchfolio</title>
+    <!-- Prefetch -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://api.themoviedb.org" />
+    <link rel="preconnect" href="https://image.tmdb.org" />
+    <link rel="preconnect" href="https://www.themoviedb.org" />
+    <!-- Main content sections -->
+    <link rel="alternate" href="/movies/popular" hreflang="en" />
+    <link rel="alternate" href="/movies/top-rated" hreflang="en" />
+    <link rel="alternate" href="/movies/now-playing" hreflang="en" />
+    <link rel="alternate" href="/movies/upcoming" hreflang="en" />
+    <link rel="alternate" href="/tv/popular" hreflang="en" />
+    <link rel="alternate" href="/tv/top-rated" hreflang="en" />
+    <link rel="alternate" href="/tv/on-the-air" hreflang="en" />
+    <link rel="alternate" href="/tv/airing-today" hreflang="en" />
+    <!-- Canonical -->
+    <link rel="canonical" href="/" />
   </head>
   <body class="dark">
     <div id="root"></div>
